# src/server.js
@@ -1,10 +1,13 @@
 const express = require("express");
 const bodyParser = require("body-parser");
-const db = require("../config/db"); // Certifique-se de que este caminho está correto
+const db = require("../config/db"); 
 const bcrypt = require("bcrypt");
+const jwt = require('jsonwebtoken');
+const SECRET_KEY = process.env.JWT_SECRET || 'admin@admin'; // Use uma variável de ambiente para isso em produção
 const Joi = require("joi");
 const swaggerUi = require("swagger-ui-express");
 const swaggerDocument = require("../config/swagger.json");
+const { authenticateAdmin } = require('../middleware/auth');
 const path = require("path");
 const app = express();
 const port = 3000;
@@ -12,6 +15,28 @@ const port = 3000;
 // Middleware
 app.use(bodyParser.json());
 app.use(express.static("public")); // Servir frontend estático
+
+// Middleware de autenticação
+function authenticateToken(req, res, next) {
+  const authHeader = req.headers['authorization'];
+  const token = authHeader && authHeader.split(' ')[1];
+
+  if (!token) return res.status(401).send("Token não fornecido.");
+
+  jwt.verify(token, SECRET_KEY, (err, user) => {
+      if (err) return res.status(403).send("Token inválido.");
+      req.user = user;
+      next();
+  });
+}
+
+// Middleware para verificar se é admin
+function isAdmin(req, res, next) {
+  if (!req.user.isAdmin) {
+      return res.status(403).send("Acesso negado. Apenas administradores.");
+  }
+  next();
+}
 
 // Documentação Swagger
 app.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
@@ -114,144 +139,6 @@ app.post("/api/registrar", (req, res) => {
 });
 
 // Rota de checkout
-/* app.post("/api/checkout", (req, res) => {
-  const {
-    userId,
-    firstName,
-    lastName,
-    address,
-    number,
-    cep,
-    phone,
-    email,
-    paymentMethod,
-    cardNumber,
-    cardExpiry,
-    cardCvc,
-    boletoCode,
-    pixKey,
-    createAccount,
-    password,
-  } = req.body;
-
-  // Validação com Joi
-  const { error } = checkoutSchema.validate(req.body);
-  if (error) {
-    return res.status(400).send(error.details[0].message);
-  }
-
-  const shippingFee = 19.9; // Frete fixo
-
-  // Verificar se o e-mail já está registrado antes de criar a conta
-  if (createAccount) {
-    db.get("SELECT * FROM Users WHERE email = ?", [email], (err, user) => {
-      if (err) {
-        return res.status(500).send("Erro ao verificar e-mail.");
-      }
-      if (user) {
-        return res.status(400).send("E-mail já registrado. Tente um email diferente.");
-      }
-
-      // Prossiga com a criação do pedido e da conta
-      createOrder(userId);
-    });
-  } else {
-    // Prossiga com a criação do pedido sem criar conta
-    createOrder(userId);
-  }
-
-  function createOrder(userId) {
-    const query = `
-      SELECT Products.price, Cart.quantity FROM Cart 
-      JOIN Products ON Cart.product_id = Products.id 
-      WHERE ${userId ? "Cart.user_id = ?" : "1=0"};`;
-
-    db.all(query, userId ? [userId] : [], (err, rows) => {
-      if (err) {
-        return res.status(500).send("Erro ao calcular total do pedido.");
-      }
-
-      const totalPrice =
-        rows.reduce((total, item) => total + item.price * item.quantity, 0) +
-        shippingFee;
-
-      db.run(
-        `
-          INSERT INTO Orders (
-              ${userId ? 'user_id, ' : ''}first_name, last_name, address, number, cep, phone, email,
-              payment_method, card_number, card_expiry, card_cvc, boleto_code, pix_key, total_price, status
-          ) VALUES (${userId ? '?, ' : ''}?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)`,
-        [
-          ...(userId ? [userId] : []), // Condicionalmente incluir userId
-          firstName,
-          lastName,
-          address,
-          number,
-          cep,
-          phone,
-          email,
-          paymentMethod,
-          cardNumber || null,
-          cardExpiry || null,
-          cardCvc || null,
-          boletoCode || null,
-          pixKey || null,
-          totalPrice,
-          "Pagamento aprovado",
-        ],
-        function (err) {
-          if (err) {
-            return res.status(500).send("Erro ao finalizar pedido.");
-          }
-
-          const orderId = this.lastID;
-          const orderNumber = `${orderId}-${
-            Math.floor(Math.random() * 9000) + 1000
-          }`;
-
-          db.run(
-            "UPDATE Orders SET order_number = ? WHERE id = ?",
-            [orderNumber, orderId],
-            function (err) {
-              if (err) {
-                return res.status(500).send("Erro ao atualizar número do pedido.");
-              }
-
-              // Limpar o carrinho após a conclusão do pedido
-              db.run("DELETE FROM Cart WHERE user_id = ?", [userId], function (err) {
-                if (err) {
-                  return res.status(500).send("Erro ao limpar o carrinho.");
-                }
-
-                if (createAccount) {
-                  const saltRounds = 10;
-                  bcrypt.hash(password, saltRounds, (err, hashedPassword) => {
-                    if (err) {
-                      return res.status(500).send("Erro ao criar conta.");
-                    }
-
-                    db.run(
-                      "INSERT INTO Users (email, password, name) VALUES (?, ?, ?)",
-                      [email, hashedPassword, `${firstName} ${lastName}`],
-                      function (err) {
-                        if (err) {
-                          return res.status(500).send("Erro ao criar conta.");
-                        }
-                        res.status(201).send({ id: orderId, orderNumber });
-                      }
-                    );
-                  });
-                } else {
-                  res.status(201).send({ id: orderId, orderNumber });
-                }
-              });
-            }
-          );
-        }
-      );
-    });
-  }
-}); */
 
 app.post("/api/checkout", (req, res) => {
   const {
@@ -586,7 +473,169 @@ app.get("/dashboard.html", (req, res) => {
   res.sendFile(path.join(__dirname, "../public/dashboard.html"));
 });
 
+app.put('/api/users/:id', authenticateAdmin, (req, res) => {
+  const { id } = req.params;
+  const { name, email, password } = req.body;
+
+  if (password) {
+      bcrypt.hash(password, 10, (err, hashedPassword) => {
+          if (err) {
+              return res.status(500).send("Erro ao hashear a senha.");
+          }
+
+          db.run("UPDATE Users SET name = ?, email = ?, password = ? WHERE id = ?", [name, email, hashedPassword, id], function (err) {
+              if (err) {
+                  return res.status(500).send("Erro ao atualizar o usuário.");
+              }
+              res.send("Usuário atualizado com sucesso.");
+          });
+      });
+  } else {
+      db.run("UPDATE Users SET name = ?, email = ? WHERE id = ?", [name, email, id], function (err) {
+          if (err) {
+              return res.status(500).send("Erro ao atualizar o usuário.");
+          }
+          res.send("Usuário atualizado com sucesso.");
+      });
+  }
+});
+
+app.delete('/api/users/:id', authenticateAdmin, (req, res) => {
+  const { id } = req.params;
+
+  db.run("DELETE FROM Users WHERE id = ?", [id], function (err) {
+      if (err) {
+          return res.status(500).send("Erro ao deletar o usuário.");
+      }
+      res.send("Usuário deletado com sucesso.");
+  });
+});
+
+// Rota PUT para atualizar itens no carrinho
+app.put('/api/cart/:id', (req, res) => {
+  const { id } = req.params;
+  const { quantity } = req.body;
+
+  db.run("UPDATE Cart SET quantity = ? WHERE id = ?", [quantity, id], function (err) {
+      if (err) {
+          return res.status(500).send("Erro ao atualizar item no carrinho.");
+      }
+      res.send("Item no carrinho atualizado com sucesso.");
+  });
+});
+
+// Rota DELETE para remover itens do carrinho
+app.delete('/api/cart/:id', (req, res) => {
+  const { id } = req.params;
+
+  db.run("DELETE FROM Cart WHERE id = ?", [id], function (err) {
+      if (err) {
+          return res.status(500).send("Erro ao remover item do carrinho.");
+      }
+      res.send("Item do carrinho removido com sucesso.");
+  });
+});
+
+// Endpoint de login
+app.post('/api/login', (req, res) => {
+  const { email, password } = req.body;
+
+  db.get("SELECT * FROM Users WHERE email = ?", [email], (err, user) => {
+      if (err || !user) {
+          return res.status(401).send("Email ou senha incorretos.");
+      }
+
+      bcrypt.compare(password, user.password, (err, isMatch) => {
+          if (err || !isMatch) {
+              return res.status(401).send("Email ou senha incorretos.");
+          }
+
+          const token = jwt.sign({ id: user.id, isAdmin: user.isAdmin }, SECRET_KEY, { expiresIn: '1h' });
+          res.json({ id: user.id, name: user.name, token }); 
+      });
+  });
+});
+
+// Rota POST para criar novos usuários
+app.post('/api/users', (req, res) => {
+  const { name, email, password, isAdmin } = req.body;
+
+  bcrypt.hash(password, 10, (err, hashedPassword) => {
+      if (err) {
+          return res.status(500).send("Erro ao hashear a senha.");
+      }
+
+      db.run(
+          "INSERT INTO Users (name, email, password, isAdmin) VALUES (?, ?, ?, ?)",
+          [name, email, hashedPassword, isAdmin ? 1 : 0],
+          function (err) {
+              if (err) {
+                  return res.status(500).send("Erro ao criar usuário.");
+              }
+              res.send("Usuário criado com sucesso.");
+          }
+      );
+  });
+});
+
+// Rota GET para listar todos os usuários
+app.get('/api/users', (req, res) => {
+  db.all("SELECT id, name, email, isAdmin FROM Users", (err, rows) => {
+      if (err) {
+          return res.status(500).send("Erro ao listar usuários.");
+      }
+      res.send(rows);
+  });
+});
+
+// Rota PUT para atualizar usuários com autenticação de administrador
+app.put('/api/users/:id', authenticateAdmin, authenticateAdmin, (req, res) => {
+  const { id } = req.params;
+  const { name, email, password, isAdmin } = req.body;
+
+  const updateUser = (hashedPassword) => {
+    db.run(
+      "UPDATE Users SET name = ?, email = ?, password = COALESCE(?, password), isAdmin = ? WHERE id = ?",
+      [name, email, hashedPassword, isAdmin ? 1 : 0, id],
+      function (err) {
+        if (err) {
+          return res.status(500).send("Erro ao atualizar o usuário.");
+        }
+        res.send("Usuário atualizado com sucesso.");
+      }
+    );
+  };
+
+  if (password) {
+    bcrypt.hash(password, 10, (err, hashedPassword) => {
+      if (err) {
+        return res.status(500).send("Erro ao hashear a senha.");
+      }
+      updateUser(hashedPassword);
+    });
+  } else {
+    updateUser(null);
+  }
+});
+
+// Rota DELETE para deletar usuários com autenticação de administrador
+app.delete('/api/users/:id', authenticateAdmin,authenticateAdmin, (req, res) => {
+  const { id } = req.params;
+
+  db.run("DELETE FROM Users WHERE id = ?", [id], function (err) {
+    if (err) {
+      return res.status(500).send("Erro ao deletar o usuário.");
+    }
+    res.send("Usuário deletado com sucesso.");
+  });
+});
+
+
 app.listen(port, async () => {
   console.log((`Servidor rodando em http://localhost:${port}`));
   console.log((`Documentação rodando em http://localhost:${port}/api-docs`));
+});
+
+import("open").then(open => {
+  open.default(`http://localhost:${port}`);
 });
